[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://character.png" type="Texture" id=2]
[ext_resource path="res://M484BulletCollection1.png" type="Texture" id=3]
[ext_resource path="res://GridSnapper.gd" type="Script" id=4]
[ext_resource path="res://healthBar_background.png" type="Texture" id=5]
[ext_resource path="res://healthBar_health.png" type="Texture" id=6]
[ext_resource path="res://TextureProgress.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 240, 135 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite_Player" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 32 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite_Gun" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
offset = Vector2( 12, 0 )
region_enabled = true
region_rect = Rect2( 64, 187, 28, 8 )

[node name="FirePositon" type="Position2D" parent="Sprite_Gun"]
position = Vector2( 24, 0 )

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="GridSnapper" type="Position2D" parent="."]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="GridSnapper"]
current = true
limit_smoothed = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_drag_margin = true

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -21.0
margin_top = -20.0
margin_right = 129.0
margin_bottom = 10.0
rect_scale = Vector2( 0.3, 0.3 )
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
script = ExtResource( 7 )
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
